--- a/_includes/youtube-embed.html
+++ b/_includes/youtube-embed.html
@@ -1,3 +1,3 @@
 <iframe id="ytplayer" type="text/html" width="640" height="390"
-  src="http://www.youtube.com/embed/{{include.param}}?&origin=https:music.kylemattimore.com"
+  src="https://www.youtube.com/embed/{{include.param}}?&origin=https:music.kylemattimore.com"
   frameborder="0"> </iframe>
