--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,13 +41,13 @@
       _paq.push(['enableLinkTracking']);
       (function() {
         var u="//p.kmattimo.me/";
-        _paq.push(['setTrackerUrl', u+'piwik.php']);
+        _paq.push(['setTrackerUrl', u+'js/']);
         _paq.push(['setSiteId', '1']);
         var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'js/'; s.parentNode.insertBefore(g,s);
       })();
     </script>
-    <noscript><p><img src="//p.kmattimo.me/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
+    <noscript><p><img src="//p.kmattimo.me/js/?idsite=1" style="border:0;" alt="" /></p></noscript>
     <!-- End Piwik Code -->
 
 </footer>
